--- a/app/src/main/res/layout/activity_event_view.xml
+++ b/app/src/main/res/layout/activity_event_view.xml
@@ -179,7 +179,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:backgroundTint="@color/colorMainDark"
+            android:backgroundTint="@color/colorWhiteBlack"
             android:textColor="@color/colorWhite"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
