--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="@color/colorMainDark"
+        android:backgroundTint="@color/colorWhiteBlack"
         android:textColor="@color/colorWhite"
         android:text="@string/connexion"
         app:layout_constraintBottom_toBottomOf="parent"
