--- a/app/src/main/res/layout/content_registration.xml
+++ b/app/src/main/res/layout/content_registration.xml
@@ -93,7 +93,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="64dp"
             android:layout_marginEnd="16dp"
-            android:backgroundTint="@color/colorLightBlack"
+            android:backgroundTint="@color/colorWhiteBlack"
             android:textColor="@color/colorWhite"
             android:text="@string/validate"
             app:layout_constraintEnd_toEndOf="parent"
