--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -10,4 +10,8 @@
         <item>Ajouter une note à cette musique</item>
         <item>Supprimer cette musique de la playlist</item>
     </string-array>
+
+    <string-array name="deletePlaylist">
+        <item>Supprimer cette playlist</item>
+    </string-array>
 </resources>
