--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -5,6 +5,12 @@
         <item>Ajouter une note à cette musique</item>
     </string-array>
 
+    <string-array name="musicArrayTwo">
+        <item>Ajouter cette musique à une playlist</item>
+        <item>Ajouter une note à cette musique</item>
+        <item>Supprimer la musique</item>
+    </string-array>
+
     <string-array name="playlistMusicArray">
         <item>Ajouter cette musique à une playlist</item>
         <item>Ajouter une note à cette musique</item>
