--- a/app/src/main/res/layout/fragment_user_fragment.xml
+++ b/app/src/main/res/layout/fragment_user_fragment.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".Controllers.Tabs.Fragments.UserFragment">
 
+    <ImageButton
+        android:id="@+id/settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_action_setting"
+        android:background="@null"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/user_pic"
         android:layout_width="200dp"
