--- a/app/src/main/res/layout/activity_user_searched.xml
+++ b/app/src/main/res/layout/activity_user_searched.xml
@@ -72,4 +72,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/artistTitlesButton" />
 
+    <Button
+        android:id="@+id/streaming"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:textColor="@color/colorWhite"
+        android:backgroundTint="@color/colorWhiteBlack"
+        android:text="@string/live"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/highlight" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
