--- a/app/src/main/res/layout/activity_live.xml
+++ b/app/src/main/res/layout/activity_live.xml
@@ -7,15 +7,13 @@
     android:background="@color/colorLightBlack"
     tools:context=".Controllers.Live.Live">
 
-    <include layout="@layout/toolbar" />
+    <include
+        layout="@layout/toolbar" />
 
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/simple_player"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
